# yuy-chat

./: LICENSE  yuy-chat-README.md
yuy-chat/: Cargo.toml  USAGE.md
yuy-chat-complete/: README.md
yuy-chat-complete/src/: config.rs  conversation.rs  main.rs
yuy-chat-complete/src/models/: hf_api.rs  mod.rs  runtime.rs
yuy-chat-complete/src/ui/: chat.rs  conversations.rs  selector.rs  settings.rs
yuy-chat/src/: app.rs  config.rs
yuy-chat/src/models/: hf_api.rs  runtime.rs  scanner.rs
yuy-chat/src/ui/: menu.rs  mod.rs
