[package]
name = "yuy-chat"
version = "0.1.0"
edition = "2021"
authors = ["Yuuki Team"]
description = "Beautiful TUI chat interface for local AI models"
license = "MIT"
repository = "https://github.com/YuuKi-OS/yuy-chat"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for HuggingFace API
reqwest = { version = "0.12", features = ["json"] }

# File system operations
walkdir = "2.4"
dirs = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time for conversations
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Terminal colors
colored = "2.1"

# Async process management
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Command detection
which = "6.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "yuy-chat"
path = "src/main.rs"
